[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/s_main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Audio/Themes/Level_1.wav" type="AudioStream" id=3]

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Back" type="Panel" parent="."]
modulate = Color( 0, 0.0235294, 0.278431, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2400.0
margin_top = -1350.0
margin_right = 2400.0
margin_bottom = 1350.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -234.5
margin_right = 234.5
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main" type="Button" parent="Menu"]
margin_right = 85.0
margin_bottom = 40.0
text = "main menu"

[node name="build" type="Button" parent="Menu"]
margin_left = 89.0
margin_right = 152.0
margin_bottom = 40.0
text = "building"

[node name="next_chapter" type="Button" parent="Menu"]
margin_left = 156.0
margin_right = 248.0
margin_bottom = 40.0
text = "next chapter"

[node name="prev_chapter" type="Button" parent="Menu"]
margin_left = 252.0
margin_right = 344.0
margin_bottom = 40.0
text = "prev chapter"

[node name="add_fuel" type="Button" parent="Menu"]
margin_left = 348.0
margin_right = 411.0
margin_bottom = 40.0
text = "add fuel"

[node name="launch" type="Button" parent="Menu"]
margin_left = 415.0
margin_right = 469.0
margin_bottom = 40.0
text = "launch"

[node name="CurrentScene" type="Node" parent="."]
pause_mode = 1

[node name="MainMenu" parent="CurrentScene" instance=ExtResource( 2 )]

[node name="Tween" type="Tween" parent="."]

[node name="Transition" type="Panel" parent="."]
modulate = Color( 0, 0.0235294, 0.278431, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2400.0
margin_top = -1350.0
margin_right = 2400.0
margin_bottom = 1350.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = 67.2717
margin_top = 13.4543
margin_right = 352.272
margin_bottom = 56.4543
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioLevel" type="Node" parent="."]

[node name="Level1" type="AudioStreamPlayer" parent="AudioLevel"]
stream = ExtResource( 3 )
bus = "Background Music"

[node name="Tween" type="Tween" parent="AudioLevel"]
[connection signal="pressed" from="Menu/main" to="." method="load_main_menu"]
[connection signal="pressed" from="Menu/build" to="." method="load_building_scene"]
[connection signal="pressed" from="Menu/next_chapter" to="." method="_on_next_chapter_pressed"]
[connection signal="pressed" from="Menu/prev_chapter" to="." method="_on_prev_chapter_pressed"]
[connection signal="pressed" from="Menu/add_fuel" to="." method="_on_add_fuel_pressed"]
[connection signal="pressed" from="Menu/launch" to="." method="load_launch_scene"]
